# DexcomServer

./: README.md  pydexcom.py  pyproject.toml  pythondex.py  server4Render.py  setup.py  sever2_0.py
DexcomData/: DexcomDataCode  __init__.py  sever2_0.py
