[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DexcomData"
version = "0.1.0"
description = "A Python library for monitoring continuous glucose data from the official Dexcom server"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Dhanya", email = "sridhanya3000@gmail.com"},
]
keywords = ["dexcom", "glucose", "diabetes", "monitoring", "cgm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
web = ["flask>=2.0.0"]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
"Homepage" = "https://github.com/dhanya2oo4/dexcom-glucose-monitor"
"Bug Reports" = "https://github.com/dhanya2oo4/dexcom-glucose-monitor/issues"
"Source" = "https://github.com/dhanya2oo4/dexcom-glucose-monitor"

[project.scripts]
dexcom-monitor = "dexcom_monitor.cli:main"